Published the library to maven/sonatype.

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,22 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+VERSION_NAME=0.0.1
+VERSION_CODE=1
+GROUP=com.luckypines
+
+POM_DESCRIPTION=Unofficial, incomplete, experimental software development kit for Jacquard(tm) by Google
+POM_URL=https://github.com/fumiakiy/JacquardLib
+POM_SCM_URL=https://github.com/fumiakiy/JacquardLib
+POM_SCM_CONNECTION=scm:hg:https://github.com/fumiakiy/JacquardLib
+POM_SCM_DEV_CONNECTION=scm:hg:https://github.com/fumiakiy/JacquardLib
+POM_LICENCE_NAME=MIT License
+POM_LICENCE_URL=http://www.opensource.org/licenses/mit-license.php
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=fumiakiy
+POM_DEVELOPER_NAME=Fumiaki Yoshimatsu
+
+SNAPSHOT_REPOSITORY_URL=https://oss.sonatype.org/content/repositories/snapshots
+RELEASE_REPOSITORY_URL=https://oss.sonatype.org/service/local/staging/deploy/maven2
+
