--- a/jacquardlib/build.gradle
+++ b/jacquardlib/build.gradle
@@ -34,3 +34,9 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
+
+apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
+
+tasks.withType(Javadoc).all {
+    enabled = false
+}
